update config files

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    />
     <link rel="icon" href="/favicon.png" />
+    <script src="https://kit.fontawesome.com/d7c5260367.js" crossorigin="anonymous"></script>
     <title>Decito's Links</title>
   </head>
   <body>
